--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -264,7 +264,7 @@
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
                         <span class="white-2">Division of Commerce and Administration</span>
                         <span class="white-3">4GCM, 3GCM, 2GCC & 1GCC</span>
-                        <a href="https://www.ltett.lu/" class="normal-link" target="_blank">www.ltett.lu<img src="/assets/svg/link.svg" alt=""></a>
+                        <a href="https://www.ltett.lu/" class="normal-link" target="_blank">www.ltett.lu<img src="/assets/svg/link.svg" alt="link symbol"></a>
                         <p>
                             <b>Graduated:</b> 6 July 2024
                         </p>
@@ -358,46 +358,14 @@
                                 </button>
 
                                 <div class="accordion-content" hidden>
-                                    Content for header 2.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Political Economy
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    Content for header 2.
-                                </div>
-                            </div>
-
-                            <div class="accordion-item">
-                                <button class="accordion-header" aria-expanded="false">
-                                    Discipline: Political Economy
-                                </button>
-
-                                <div class="accordion-content" hidden>
-                                    Content for header 2.
+                                    The course on “knowledge of the contemporary world" provides pupils with the necessary 
+                                    elements to understand the contemporary world in all its complexity. Knowledge and 
+                                    skills in areas as diverse as recent history, geography, political economy, society, 
+                                    and contemporary geopolitics enable pupils to develop their critical faculties and act 
+                                    as free, aware, and responsible citizens.
                                 </div>
                             </div>
                         </div>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Since 2022</span>
-                        <span class="white-2">Physical Exercise</span>
-                        <p>
-                            
-                        </p>
-                    </div>
-
-                    <div class="column-box">
-                        <span class="gray-1">Since 2018</span>
-                        <span class="white-2">Graphic Design</span>
-                        <p>
-                            
-                        </p>
                     </div>
                 </div>
 
@@ -496,16 +464,35 @@
                     </div>
 
                     <div class="column-box">
-                        <p>
-                            During my commerce studies, I interned at a marble stone fabricator, 
-                            gaining comprehensive knowledge of the marble industry. I assisted with sales 
-                            by interacting with customers, understanding their needs, and helping 
-                            them choose suitable marble products. Additionally, I observed the 
-                            installation process, learning about the technical and logistical aspects. 
-                            This experience deepened my understanding of various marble types, their 
-                            applications, and the craftsmanship involved, while also enhancing my 
-                            customer service and product selection skills.
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, I interned at a marble stone fabricator, 
+                                gaining comprehensive knowledge of the marble industry. I assisted with sales 
+                                by interacting with customers, understanding their needs, and helping 
+                                them choose suitable marble products. Additionally, I observed the 
+                                installation process, learning about the technical and logistical aspects. 
+                                This experience deepened my understanding of various marble types, their 
+                                applications, and the craftsmanship involved, while also enhancing my 
+                                customer service and product selection skills.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <ul class="exp-ul">
+                            <li>Acquired comprehensive knowledge about the marble industry</li>
+                            <li>Assisted with sales. Observed sales experts interacting with customers, 
+                                understanding their needs, and  how they helped them choose suitable 
+                                marble products</li>
+                            <li>Observed the installation process, gaining insights into technical 
+                                and logistical aspects of marble installation</li>
+                            <li>Developed better understanding of customer service and product selection</li>
+                            <li>Organized documents and files to improve efficiency in administration</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -528,16 +515,35 @@
                     </div>
 
                     <div class="column-box">
-                        <p>
-                            During my commerce studies, I interned at a local pharmacy, gaining invaluable 
-                            hands-on experience. I was actively involved in daily operations, particularly 
-                            in inventory management, ensuring medications and supplies were stocked and 
-                            organized. This included conducting inventory checks, managing stock levels, 
-                            and reordering products as needed. I also supported the pharmacy staff in 
-                            maintaining records and organizing storage areas. This experience enhanced 
-                            my understanding of inventory control processes, improved my organizational 
-                            skills, and provided insights into pharmacy operations.
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, I interned at a marble stone fabricator, 
+                                gaining comprehensive knowledge of the marble industry. I assisted with sales 
+                                by interacting with customers, understanding their needs, and helping 
+                                them choose suitable marble products. Additionally, I observed the 
+                                installation process, learning about the technical and logistical aspects. 
+                                This experience deepened my understanding of various marble types, their 
+                                applications, and the craftsmanship involved, while also enhancing my 
+                                customer service and product selection skills.
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="column-box">
+                        <ul class="exp-ul">
+                            <li>Acquired comprehensive knowledge about the marble industry</li>
+                            <li>Assisted with sales. Observed sales experts interacting with customers, 
+                                understanding their needs, and  how they helped them choose suitable 
+                                marble products</li>
+                            <li>Observed the installation process, gaining insights into technical 
+                                and logistical aspects of marble installation</li>
+                            <li>Developed better understanding of customer service and product selection</li>
+                            <li>Organized documents and files to improve efficiency in administration</li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -568,11 +574,13 @@
                     </h3>
                     <h5>My problem-solving abilities enable me to address challenges methodically.</h5>
                     <p>
-                        My educational journey has endowed me with essential soft skills that are vital for professional 
-                        success. While I may not be the most socially adept, I excel in written communication, allowing me 
-                        to articulate ideas clearly. My problem-solving abilities enable me to address challenges with a 
-                        logical and strategic approach. Additionally, I am a quick learner, adaptable, and possess a strong 
-                        work ethic.
+                        My educational journey has equipped me with crucial hard skills essential for 
+                        success in the financial sector. I have developed strong analytical abilities 
+                        that allow me to approach problems with a logical, data-driven mindset. I excel 
+                        in financial analysis, data interpretation, and precise report writing, ensuring 
+                        clarity and accuracy in communication. Additionally, I am proficient in key financial 
+                        software and tools, and I adapt quickly to new technologies and processes, consistently 
+                        maintaining a strong work ethic.
                     </p>
                 </div>
             </div>
