--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -205,7 +205,7 @@
                         <span class="white-2">1GCC | Deserving Student 2023/24</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            and examplary behavior
                         </p>
                     </div>
 
@@ -213,7 +213,8 @@
                         <span class="gray-1">CNPSES & Chambre de Commerce</span>
                         <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
                         <p>
-                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
+                            Award for outstanding performance in Accounting, Business Economics & Political 
+                            Economy which is awarded to only 40 Students in Luxembourg each year
                         </p>
                     </div>
 
@@ -222,7 +223,7 @@
                         <span class="white-2">2GCC | Deserving Student 2022/23</span>
                         <p>
                             A distinction awarded to students with outstanding marks
-                            and examplary behavior.
+                            and examplary behavior
                         </p>
                     </div>
 
@@ -238,7 +239,7 @@
                         <span class="gray-1">Lycée Technique d'Ettelbruck</span>
                         <span class="white-2">Aktiv Plang | Project 'Study' 2022/23</span>
                         <p>
-                            Rewarded to students for their regular use of the library, a quiet place to do homework and research. 
+                            Rewarded to students for their regular use of the library, a quiet place to do homework and research
                         </p>
                     </div>
 
@@ -521,28 +522,25 @@
                             </button>
 
                             <div class="accordion-content" hidden>
-                                During my commerce studies, I interned at a marble stone fabricator, 
-                                gaining comprehensive knowledge of the marble industry. I assisted with sales 
-                                by interacting with customers, understanding their needs, and helping 
-                                them choose suitable marble products. Additionally, I observed the 
-                                installation process, learning about the technical and logistical aspects. 
-                                This experience deepened my understanding of various marble types, their 
-                                applications, and the craftsmanship involved, while also enhancing my 
-                                customer service and product selection skills.
+                                During my commerce studies, I interned at a local pharmacy, gaining 
+                                invaluable hands-on experience. I was actively involved in daily operations, 
+                                particularly in inventory management, ensuring medications and supplies were 
+                                stocked and organized. This included conducting inventory checks, managing 
+                                stock levels, and reordering products as needed. I also supported the pharmacy 
+                                staff in maintaining records and organizing storage areas. This experience 
+                                enhanced my understanding of inventory control processes, improved my organizational 
+                                skills, and provided insights into pharmacy operations.
                             </div>
                         </div>
                     </div>
 
                     <div class="column-box">
                         <ul class="exp-ul">
-                            <li>Acquired comprehensive knowledge about the marble industry</li>
-                            <li>Assisted with sales. Observed sales experts interacting with customers, 
-                                understanding their needs, and  how they helped them choose suitable 
-                                marble products</li>
-                            <li>Observed the installation process, gaining insights into technical 
-                                and logistical aspects of marble installation</li>
-                            <li>Developed better understanding of customer service and product selection</li>
-                            <li>Organized documents and files to improve efficiency in administration</li>
+                            <li>Assisted with inventory management, ensured that medications and supplies 
+                                were adequately stocked and organized</li>
+                            <li>Conducted regular inventory checks, managing stock levels and helped reorder products as needed</li>
+                            <li>Supported pharmacy staff in maintaining accurate records</li>
+                            <li>Developed a keen understanding of inventory control processes</li>
                         </ul>
                     </div>
                 </div>
@@ -562,17 +560,17 @@
 
         <div class="two-columns">
             <div class="container">
-                <img src="/assets/img/books.png" alt="pile of books">
+                <img src="/assets/img/rubics-cube.png" alt="pile of books">
             </div>
 
             <div class="container">
                 <div class="text">
                     <h3>
-                        <span>Life long learning</span>
-                        <span>is essential to</span>
-                        <span>succeed nowadays</span>
+                        <span>Core competencies</span>
+                        <span>relevant to the</span>
+                        <span>financial sector</span>
                     </h3>
-                    <h5>My problem-solving abilities enable me to address challenges methodically.</h5>
+                    <h5>Key Skills for Financial Analysis and Business Success</h5>
                     <p>
                         My educational journey has equipped me with crucial hard skills essential for 
                         success in the financial sector. I have developed strong analytical abilities 
