--- a/views/pages/gb.ejs
+++ b/views/pages/gb.ejs
@@ -577,8 +577,7 @@
                         that allow me to approach problems with a logical, data-driven mindset. I excel 
                         in financial analysis, data interpretation, and precise report writing, ensuring 
                         clarity and accuracy in communication. Additionally, I am proficient in key financial 
-                        software and tools, and I adapt quickly to new technologies and processes, consistently 
-                        maintaining a strong work ethic.
+                        software and tools.
                     </p>
                 </div>
             </div>
@@ -587,50 +586,70 @@
         <div class="two-columns">
             <div class="container">
                 <div class="flex-title">
-                    <h4>Hard Skills</h4>
-                    <span class="title-1">Awards</span>
+                    <h4>Achademic</h4>
+                    <span class="title-1">Skills</span>
                 </div>
                 <div class="column-list">
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">Accordion </span>
-                        <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, 
+                            </div>
+                        </div>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">CNPSES & Chambre de Commerce</span>
-                        <span class="white-2">Academic Performance Certificate (GCC) 2024</span>
-                        <p>
-                            Award for outstanding performance in Accounting, Business Economics & Political Economy which is awarded to only 40 Students in Luxembourg each year
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, 
+                            </div>
+                        </div>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Lycée Technique d'Ettelbruck</span>
-                        <span class="white-2">2GCC | Deserving Student 2022/23</span>
-                        <p>
-                            A distinction awarded to students with outstanding marks
-                            and examplary behavior.
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, 
+                            </div>
+                        </div>
                     </div>
 
                     <div class="column-box">
-                        <span class="gray-1">Jonk Entrepreneuren</span>
-                        <span class="white-2">Trendiction SA | Job Shadow Event 2024</span>
-                        <p>
-                            A voluntary event for students to visit a company for one day (entrepreneurship & career guidance)
-                        </p>
+                        <div class="accordion-item">
+                            <button class="accordion-header" aria-expanded="false">
+                                More information
+                            </button>
+
+                            <div class="accordion-content" hidden>
+                                During my commerce studies, 
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="flex-title">
+                    <h4>Soft</h4>
+                    <span class="title-1">Skills</span>
+                </div>
+
             </div>
 
             <div class="container">
                 <div class="flex-title">
-                    <h4>Soft Skills</h4>
-                    <span class="title-1">Hobbies</span>
+                    <h4>Technical</h4>
+                    <span class="title-1">Skills</span>
                 </div>
 
                 <div class="column-list">
